<resources>
    <string name="app_name">AI助手</string>
    <string name="permission_fail">必须允许所有权限，否则功能会异常</string>
    <string name="image_view_assistant">帮助</string>
    <string name="image_view_microphone">麦克风</string>
    <string name="image_view_option">选项</string>
    <string name="image_view_manage">菜单管理</string>
    <string name="image_view_left_arrow">左箭头</string>
    <string name="image_view_right_arrow">右箭头</string>
    <string name="image_view_send_head">发送消息头像</string>
    <string name="image_view_receive_head">接收消息头像</string>
    <string name="text_view_debug">调试信息</string>
    <string name="option_dialog_title">功能选择</string>
    <string name="option_voice_output_text">语音播报文本</string>
    <string name="option_query_again">重新提问</string>
    <string name="option_copy_edit_text">拷贝编辑文本</string>
    <string name="option_clear_item">清除显示</string>
    <string name="option_web_query_text">上网搜索文本</string>
    <string name="option_save_image">保存图片</string>
    <string name="option_show_setting">系统设置</string>
    <string name="option_show_help">显示帮助</string>
    <string name="option_translate_start">开始翻译</string>
    <string name="option_shortcut_translate_stop">结束翻译</string>
    <string name="option_ocr">OCR文字识别</string>
    <string name="option_face_identify">人脸识别</string>
    <string name="option_image_classify">物体识别</string>
    <string name="option_text_input">文本输入</string>
    <string name="option_clear_all_items">清除所有显示</string>
    <string name="option_face_detect">人脸检测</string>
    <string name="option_face_merge">人脸融合</string>
    <string name="option_face_compare">人脸比较</string>
    <string name="option_face_authenticate">身份认证</string>
    <string name="option_show_face_manger">人脸库管理</string>
    <string name="option_human_body_gesture">手势识别</string>
    <string name="option_human_body_headcount">清点人头</string>
    <string name="option_ocr_qrcode">二维码识别</string>
    <string name="option_camera">拍照识别</string>
    <string name="option_image">图片识别</string>
    <string name="baidu_unit_welcome">我是富士康手机小助手小康，现已准备好了。按*键显示帮助</string>
    <string name="baidu_unit_welcome_support_touch">我是富士康手机小助手小康，现已准备好了。</string>
    <string name="baidu_unit_about">当前版本是：</string>
    <string name="baidu_unit_question_help">
        一、必须连接网络，按确认键开始一问一答。你可以问我:\n
        1.今天[北京]天气怎么样?\n
        2.台湾有多大?\n
        3.[英语|法语|韩语]翻译今天星期几?\n
        4.一公里等于几英里?\n
        5. 99的平方是多少?\n
        6.什么是叶公好龙?\n
        7.写首关于春天的诗\n
        8.写个关于过年的对联\n
        9.上网搜索科幻小说\n
        10.讲个笑话\n\n
        你还可以命令我:\n
        1.把[声音|亮度]调[最][高|低]\n
        2.拍个照[录个相]\n
        3.播首歌[双节棍]\n
        4.打个电话给10086[老婆]\n
        5.打开[图库|相机|设置]
    </string>
    <string name="baidu_unit_question_help_dialogue_translate_mode">
        二、如何进入特殊对话模式?\n
        1.翻译模式。\n
        (1)按1键进入/退出中英互译。\n
        (2)语音”开始翻译[英语/德语/..]“，”开始[英语/德语]翻译“。\n
        (3)语音”结束“或“退出“。\n
        2.诗词/对联模式。\n
        (1)语音”开始写[诗|对联]”。\n
        (2)语音”结束“或“退出“。</string>
    <string name="baidu_unit_question_help_dialogue_translate_mode_support_touch">
        二、如何进入特殊对话模式?\n
        1.翻译模式。\n
        (1)按右下菜单键，选择【开始翻译】进入或退出。\n
        (2)语音”开始翻译[英语/德语/..]“，”开始[英语/德语]翻译“。\n
        (3)语音”结束“或“退出“。\n
        2.诗词/对联模式。\n
        (1)语音”开始写[诗|对联]”。\n
        (2)语音”结束“或“退出“。</string>
    <string name="baidu_unit_question_help_face_mode">
        三、如何进入人脸识别模式?\n
        1.按2键快捷进入人脸识别。\n
        2.进入后按住中间确认键开始扫描人脸。\n
        3.如何扫描成功会自动退出该界面。\n
        4.或按回退键退出。</string>
    <string name="baidu_unit_question_help_face_mode_support_touch">
        三、如何进入人脸识别模式?\n
        1.按右下菜单键，选择【人脸识别】进入。\n
        2.语音”人脸识别“。\n
        2.进入后长按下方人脸开始扫描。\n
        3.如何扫描成功会自动退出该界面。\n
        4.或按回退键退出。</string>
    <string name="baidu_unit_question_help_ocr_mode">
        四、如何进入OCR模式?\n
        1.按3键快捷进入OCR拍照。\n
        2.语音”扫描[英语/德语/..]“或”[英语/德语]扫描“。\n
        3.进入后按确认键拍照识别后提问。\n
        4.进入后按3键拍照只识别。\n
        5.按回退键退出。</string>
    <string name="baidu_unit_question_help_ocr_mode_support_touch">
        四、如何进入OCR模式?\n
        1.按右下菜单键，选择【OCR文字识别】进入\n
        2.语音”扫描[英语/德语/..]“或”[英语/德语]扫描“。\n
        3.进入后按识别键拍照识别，或长按识别后提问。\n
        4.按回退键退出。</string>
    <string name="baidu_unit_question_help_classify_mode_support_touch">
        五、如何进入物体识别模式?\n
        1.按右下菜单键，选择【物体识别】进入\n
        2.语音”通用识别“，”植物识别“，”车型识别“等。\n
        3.进入后按识别键拍照识别，或长按识别后提问。\n
        4.按回退键退出。</string>
    <string name="baidu_unit_question_help_keyboard_input">
        六、如何键盘文字输入?\n
        1.按菜单键显示或隐藏文字输入框。\n
        2.按确认键完成文字输入。</string>
    <string name="baidu_unit_question_help_extra_fun">
        七、如何激活额外附加功能?\n
        1.在系统设置中选择【启用额外功能】。\n
        2.常按右下菜单键进入额外功能菜单。</string>
    <string name="baidu_unit_answer_fail">没有任何回复</string>
    <string name="baidu_unit_quit_session">好的，我明白了。请继续提问！</string>
    <string name="baidu_unit_fail_session">问的啥玩意？听不懂！</string>
    <string name="button_cancel">取消</string>
    <string name="button_ok">确定</string>
    <string name="helpInfo_title">帮助信息</string>
    <string name="setting_title">系统设置</string>
    <string name="baidu_debug">调试信息输出</string>
    <string name="baidu_tts">语音合成输出</string>
    <string name="baidu_request_image">请求图片输出</string>
    <string name="baidu_face_identify_work_mode">人脸识别模式</string>
        <string name="baidu_offline_face_identify">离线人脸模块</string>
        <string name="baidu_online_1N_face_identify">在线1:N多人脸识别模块</string>
        <string name="baidu_online_MN_face_identify">在线M:N多人脸识别模块</string>
        <string name="baidu_content_approve_face_identify">图像审核公众人物识别模块</string>
    <string name="baidu_extra_fun">启用额外功能</string>
    <string name="baidu_unit_work_mode">工作模式</string>
    <string name="baidu_unit_asr_bot">ASR</string>
    <string name="baidu_unit_keyboard_bot">BOT</string>
    <string name="baidu_unit_keyboard_robot">Robot</string>
    <string name="baidu_unit_working">努力工作中..</string>
    <string name="baidu_unit_initializing">软件初始化过程中..</string>
    <string name="baidu_unit_robot_type">机器人类别</string>
    <string name="baidu_unit_robot_web">网络响应</string>
    <string name="baidu_unit_robot_local">本地响应</string>
    <string name="baidu_unit_robot_all">所有响应</string>
    <string name="baidu_unit_speech_language_type">语音识别语言类别</string>
    <string name="baidu_unit_speech_language_english">英语</string>
    <string name="baidu_unit_speech_language_chinese">普通话</string>
    <string name="baidu_unit_speech_language_sichuanese">四川话</string>
    <string name="baidu_unit_speech_language_cantonese">粤语</string>
    <string name="baidu_unit_bot_type">技能类别</string>
    <string name="baidu_unit_bot_weather">天气</string>
    <string name="baidu_unit_bot_ia">智能问答</string>
    <string name="baidu_unit_bot_calculator">计算器</string>
    <string name="baidu_unit_bot_definition">名词解释</string>
    <string name="baidu_unit_bot_idiom">成语问答</string>
    <string name="baidu_unit_bot_unit_conversion">单位换算</string>
    <string name="baidu_unit_bot_greet">问候</string>
    <string name="baidu_unit_bot_chat">闲聊</string>
    <string name="baidu_unit_bot_poem">智能写诗</string>
    <string name="baidu_unit_bot_couplet">智能对联</string>
    <string name="baidu_unit_bot_translate">智能翻译</string>
    <string name="baidu_unit_bot_joke">笑话</string>
    <string name="baidu_unit_bot_garbage">垃圾分类</string>
    <string name="baidu_unit_bot_phone">打电话</string>
    <string name="baidu_unit_bot_message">发短信</string>
    <string name="baidu_unit_bot_screen_control">屏幕控制</string>
    <string name="baidu_unit_bot_story">故事</string>
    <string name="baidu_unit_bot_music">音乐</string>
    <string name="baidu_unit_bot_alarm">闹钟</string>
    <string name="baidu_unit_bot_notify">提醒</string>
    <string name="baidu_unit_bot_movie">电影</string>
    <string name="baidu_unit_bot_train_ticket">火车票</string>
    <string name="baidu_unit_bot_radio">电台控制</string>
    <string name="baidu_classify_image_type">物体识别分类</string>
    <string name="baidu_classify_image_general_type">通用识别</string>
    <string name="baidu_classify_image_plant_type">植物识别</string>
    <string name="baidu_classify_image_car_type">车型识别</string>
    <string name="baidu_classify_image_dish_type">菜品识别</string>
    <string name="baidu_classify_image_red_wine_type">红酒识别</string>
    <string name="baidu_classify_image_logo_type">商标识别</string>
    <string name="baidu_classify_image_animal_type">动物识别</string>
    <string name="baidu_classify_image_ingredient_type">果蔬食材识别</string>
    <string name="baidu_classify_image_landmark_type">地标识别</string>
    <string name="baidu_classify_image_currency_type">货币识别</string>
    <string name="baidu_unit_help">帮助\n暂时没有:(\n\n</string>
    <string name="baidu_unit_hint_brightness_low">正在降低亮度到</string>
    <string name="baidu_unit_hint_brightness_high">正在提高亮度到</string>
    <string name="baidu_unit_hint_launch_app_high">正在启动</string>
    <string name="baidu_unit_hint_exit_app_high">正退出当前应用</string>
    <string name="baidu_unit_hint_launch_image">正在拍照</string>
    <string name="baidu_unit_hint_launch_video">正在录像</string>
    <string name="baidu_unit_hint_launch_camera_fail">启动相机失败</string>
    <string name="baidu_unit_hint_playing_music">正在播放歌曲</string>
    <string name="baidu_unit_hint_playing_music_list">歌曲列表\n</string>
    <string name="baidu_unit_hint_play_music_fail">播放歌曲失败</string>
    <string name="baidu_unit_hint_phone_dialing">正在拨打电话给</string>
    <string name="baidu_unit_hint_phone_fail">没有该联系人或号码</string>
    <string name="baidu_unit_hint_voice_down">正在降低音量</string>
    <string name="baidu_unit_hint_voice_up">正在提高音量</string>
    <string name="baidu_unit_hint_voice_on">正在打开声音</string>
    <string name="baidu_unit_hint_voice_off">正在关闭声音</string>
    <string name="baidu_unit_web_search">正在上网搜索</string>
    <string name="baidu_unit_fix_translate_help">
        1.按左键汉语译外语，右键外语译汉语。\n
        2.按1键可退出，或语音”退出”。\n
        3.按3键进入OCR识别翻译。\n
        4.目前支持中英文的双向语音输入和翻译，还只支持单向中文翻译成 法语,德语,俄语,日语,韩语,泰语,意大利语,西班牙语,葡萄牙语,阿拉伯语。</string>
    <string name="baidu_unit_fix_translate_help_support_touch">
        1.按左箭头汉语译外语，右箭头外语译汉语。\n
        2.按右下菜单键，选择【退出翻译】可退出，或语音”退出”。\n
        3.按右下菜单键，选择【OCR文字识别】进入OCR识别翻译。\n
        4.目前支持中英文的双向语音输入和翻译，还只支持单向中文翻译成 法语,德语,俄语,日语,韩语,泰语,意大利语,西班牙语,葡萄牙语,阿拉伯语。</string>
    <string name="baidu_unit_fix_translate_start">进入%1$s对话翻译</string>
    <string name="baidu_unit_fix_translate_stop">退出%1$s对话翻译</string>
    <string name="baidu_unit_fix_translate_input">开始%1$s输入</string>
    <string name="baidu_unit_fix_translate_language_error">当前不支持%1$s对话翻译</string>
    <string name="baidu_unit_fix_poem_help">直接说出关键词，据此做诗一首</string>
    <string name="baidu_unit_fix_poem_start">进入诗词模式</string>
    <string name="baidu_unit_fix_poem_stop">退出诗词模式</string>
    <string name="baidu_unit_fix_couplet_help">直接说出关键词，据此写对联</string>
    <string name="baidu_unit_fix_couplet_start">进入对联模式</string>
    <string name="baidu_unit_fix_couplet_stop">退出对联模式</string>
    <string name="baidu_unit_ocr_token_error">初始化OCR token失败</string>
    <string name="baidu_unit_ocr_fail">OCR识别失败</string>
    <string name="baidu_unit_ocr_start">启动OCR识别%1$s中..</string>
    <string name="baidu_unit_ocr_not_support">目前不支持%1$s识别</string>
    <string name="baidu_unit_ocr_recognize">识别</string>
    <string name="baidu_unit_keyboard_input">键盘输入文字</string>
    <string name="baidu_face_auth_permission_active">授权激活</string>
    <string name="baidu_face_auth_active_device">激活设备</string>
    <string name="baidu_face_auth_device_fingerprint">设备硬件指纹</string>
    <string name="baidu_face_auth_copy">复制</string>
    <string name="baidu_face_auth_key_input">请输入序列码</string>
    <string name="baidu_face_auth_active_hint">基于序列号自动联网激活, 适用于调试阶段</string>
    <string name="baidu_face_auth_online_active">在线激活</string>
    <string name="baidu_face_auth_detect_sdcard">点击检查是否可以读取到 License 文件</string>
    <string name="baidu_face_auth_offline_active_hint">请将License.zip放到SD卡根目录下\n基于License文件手动激活，设备无需联网</string>
    <string name="baidu_face_auth_offline_active">离线激活</string>
</resources>