<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/title_text_view"
        android:layout_width="fill_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:background="@android:color/black"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        android:text="@string/setting_title"
        />

    <ScrollView
        android:id="@+id/center_scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title_text_view"
        android:layout_above="@+id/bottom_layout"
        android:fadeScrollbars="false"
        android:scrollbarSize="50dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/baidu_debug"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_debug"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/baidu_tts"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_tts"
                android:checked="true"/>

            <CheckBox
                android:id="@+id/baidu_offline_face"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_offline_face"
                android:checked="false"/>

            <CheckBox
                android:id="@+id/baidu_enable_extra_fun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_extra_fun"
                android:checked="false"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:visibility="gone"
                android:text="@string/baidu_unit_work_mode"
                />

            <RadioGroup
                android:id="@+id/baidu_unit_work_mode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                >
                <RadioButton
                    android:id="@+id/baidu_unit_keyboard_robot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/baidu_unit_keyboard_robot"
                    android:enabled="false"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_keyboard_bot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/baidu_unit_keyboard_bot"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_asr_bot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:text="@string/baidu_unit_asr_bot"
                    android:enabled="false"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/baidu_unit_robot_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/baidu_unit_robot_type"
                />

            <RadioGroup
                android:id="@+id/baidu_unit_robot_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/baidu_unit_robot_web"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_robot_web"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_robot_local"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_robot_local"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_robot_all"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_robot_all"
                    />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/baidu_unit_speech_language_type"
                />
            <RadioGroup
                android:id="@+id/baidu_unit_speech_language_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_english"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_english"
                    android:enabled="false"
                    android:visibility="gone"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_chinese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/holo_green_light"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_chinese"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_sichuanese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_sichuanese"
                    />
                <RadioButton
                    android:id="@+id/baidu_unit_speech_language_cantonese"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:text="@string/baidu_unit_speech_language_cantonese"
                    />
            </RadioGroup>

            <TextView
                android:id="@+id/baidu_unit_bot_type_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:textSize="20sp"
                android:text="@string/baidu_unit_bot_type"
                />
<!--Web Bot ID-->
            <CheckBox
                android:id="@+id/baidu_unit_bot_weather"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_weather"
                android:textColor="@android:color/holo_green_light"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_ia"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_ia"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_definition"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_definition"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_idiom"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_idiom"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_calculator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_calculator"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_unit_conversion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_unit_conversion"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_greet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_greet"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_chat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_chat"
                android:checked="true"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_poem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_poem"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_couplet"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_couplet"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_translate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_translate"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_joke"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:textColor="@android:color/holo_green_light"
                android:text="@string/baidu_unit_bot_joke"
                android:checked="false"/>
<!--Local Bot ID-->
 <!--           <CheckBox
                android:id="@+id/baidu_unit_bot_phone"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_phone"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_message"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_message"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_screen_control"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_screen_control"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_story"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_story"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_music"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_music"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_alarm"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_alarm"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_notify"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_notify"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_movie"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_movie"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_train_ticket"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_train_ticket"
                android:checked="false"/>
            <CheckBox
                android:id="@+id/baidu_unit_bot_radio"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="15sp"
                android:text="@string/baidu_unit_bot_radio"
                android:checked="false"/>-->
        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/bottom_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal"
        >

        <Button
            android:id="@+id/setting_cancel"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button_cancel"
            />

        <Button
            android:id="@+id/setting_ok"
            style="?android:attr/buttonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="20sp"
            android:text="@string/button_ok"
            />
    </LinearLayout>
</RelativeLayout>
